Adding all logic needed to print proper results to a tsv file

--- a/semisupervised.ipynb
+++ b/semisupervised.ipynb
@@ -1,24 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [],
-      "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMIE7wytOkpr2RVlNWJDuD6",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -32,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 25,
       "metadata": {
         "id": "zwkkSetusdVb"
       },
@@ -59,40 +39,45 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "\n",
-        "drive.mount('/content/gdrive')"
-      ],
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hjngr6X6sk7r",
-        "outputId": "c92c8e25-df24-41f9-e4be-de51c491a2af"
+        "outputId": "c32c8f85-1b19-4e27-8933-ac3100b6029e"
       },
-      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "\n",
+        "drive.mount('/content/gdrive')"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Original"
-      ],
       "metadata": {
         "id": "LOrbZInp2lY5"
-      }
+      },
+      "source": [
+        "Original"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {
+        "id": "pEpjh6qgsoYf"
+      },
+      "outputs": [],
       "source": [
         "def read_file_to_sents():\n",
         "    all_data = []\n",
@@ -114,24 +99,24 @@
         "            all_data.append(cur_word)\n",
         "\n",
         "    return all_data"
-      ],
-      "metadata": {
-        "id": "pEpjh6qgsoYf"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Original"
-      ],
       "metadata": {
         "id": "9zD5BnvUaj3j"
-      }
+      },
+      "source": [
+        "Original"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {
+        "id": "CqSPyByEtTj9"
+      },
+      "outputs": [],
       "source": [
         "def split_data(data):\n",
         "    split_x = []\n",
@@ -148,24 +133,24 @@
         "        split_y.append(cur_y)\n",
         "\n",
         "    return split_x, split_y"
-      ],
-      "metadata": {
-        "id": "CqSPyByEtTj9"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "original"
-      ],
       "metadata": {
         "id": "CRBqIXaxago5"
-      }
+      },
+      "source": [
+        "original"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "NjrEIguxR2u2"
+      },
+      "outputs": [],
       "source": [
         "def combine_all_y(y):\n",
         "    all_y = []\n",
@@ -175,24 +160,24 @@
         "            all_y.append(letter)\n",
         "\n",
         "    return all_y"
-      ],
-      "metadata": {
-        "id": "NjrEIguxR2u2"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "original"
-      ],
       "metadata": {
         "id": "QQGEbxAwaf4H"
-      }
+      },
+      "source": [
+        "original"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {
+        "id": "lfvbBNrTStwR"
+      },
+      "outputs": [],
       "source": [
         "def split_out(x, y):\n",
         "    fixed_y = []\n",
@@ -208,15 +193,24 @@
         "\n",
         "    return fixed_y\n",
         "        "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
       ],
       "metadata": {
-        "id": "lfvbBNrTStwR"
-      },
-      "execution_count": 41,
-      "outputs": []
+        "id": "yhlots7A1J2T"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {
+        "id": "UlPOHdTtNt0Z"
+      },
+      "outputs": [],
       "source": [
         "def calc_acc(preds, y_test):\n",
         "    total_right = 0\n",
@@ -232,15 +226,24 @@
         "    accuracy = 100 * (total_right/total_size)\n",
         "\n",
         "    return accuracy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
       ],
       "metadata": {
-        "id": "UlPOHdTtNt0Z"
-      },
-      "execution_count": 46,
-      "outputs": []
+        "id": "-sILycj-1LH-"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "9Si092wuN0r7"
+      },
+      "outputs": [],
       "source": [
         "def calc_rec(preds, y_test):\n",
         "    true_pos = 0\n",
@@ -259,15 +262,24 @@
         "    recall = 100 * (true_pos / (true_pos + false_neg))\n",
         "\n",
         "    return recall"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
       ],
       "metadata": {
-        "id": "9Si092wuN0r7"
-      },
-      "execution_count": 20,
-      "outputs": []
+        "id": "eVGB3QZD1NOX"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {
+        "id": "TWe2rpGYNxup"
+      },
+      "outputs": [],
       "source": [
         "def calc_prec(preds, y_test):  \n",
         "    true_pos = 0\n",
@@ -286,15 +298,24 @@
         "    precision = 100 * (true_pos / (true_pos + false_pos))\n",
         "\n",
         "    return precision"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
       ],
       "metadata": {
-        "id": "TWe2rpGYNxup"
-      },
-      "execution_count": 47,
-      "outputs": []
+        "id": "nrdYONiO1Omk"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "id": "ISMUcoOzNnOR"
+      },
+      "outputs": [],
       "source": [
         "def custom_eval(preds, y_clean):\n",
         "    acc = calc_acc(preds, y_clean)\n",
@@ -312,24 +333,24 @@
         "    fscore = (2 * (prec * recall)) / (prec + recall)\n",
         "\n",
         "    print(\"Fscore: \", fscore)"
-      ],
-      "metadata": {
-        "id": "ISMUcoOzNnOR"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Based on code from https://machinelearningmastery.com/semi-supervised-learning-with-label-propagation/"
-      ],
       "metadata": {
         "id": "tYgh3vOOaeHN"
-      }
+      },
+      "source": [
+        "Based on code from https://machinelearningmastery.com/semi-supervised-learning-with-label-propagation/"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {
+        "id": "-NtZSkDetvsB"
+      },
+      "outputs": [],
       "source": [
         "def semi_supervised():\n",
         "    data = read_file_to_sents()\n",
@@ -338,6 +359,7 @@
         "\n",
         "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.5, random_state = 50)\n",
         "    clean_y_test = y_test\n",
+        "    clean_x_test = x_test\n",
         "\n",
         "    x_lab = combine_all_y(x_train[:650])\n",
         "    y_lab = combine_all_y(y_train[:650])\n",
@@ -377,13 +399,17 @@
         "    clean_preds = le.inverse_transform(y_hat)\n",
         "    clean_preds = split_out(clean_y_test, clean_preds)\n",
         "\n",
-        "    custom_eval(clean_preds, clean_y_test)"
-      ],
-      "metadata": {
-        "id": "-NtZSkDetvsB"
-      },
-      "execution_count": 48,
-      "outputs": []
+        "    custom_eval(clean_preds, clean_y_test)\n",
+        "    clean_preds = make_words(clean_preds)\n",
+        "\n",
+        "    clean_x_test = make_words(clean_x_test)\n",
+        "\n",
+        "    combined = combine_data(clean_x_test, clean_preds)\n",
+        "\n",
+        "    graphs = to_graphemes(combined)\n",
+        "\n",
+        "    print_results_to_file(graphs)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -391,28 +417,147 @@
         "Original"
       ],
       "metadata": {
-        "id": "HQyTtVkr3SzM"
+        "id": "ATyOolX11QV5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {
+        "id": "a0xHr2oVvLpG"
+      },
+      "outputs": [],
+      "source": [
+        "def make_words(data):\n",
+        "    all_data = []\n",
+        "\n",
+        "    for word in data:\n",
+        "        cur_word = []\n",
+        "        for letter in word:\n",
+        "            cur_word.append(letter)\n",
+        "\n",
+        "        all_data.append(''.join(cur_word))\n",
+        "\n",
+        "    return all_data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "Dd_J8A6a1SRM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "id": "9-M087Mewjt1"
+      },
+      "outputs": [],
+      "source": [
+        "def combine_data(x, y):\n",
+        "    all_data = []\n",
+        "\n",
+        "    for i in range(0, len(x)):\n",
+        "        all_data.append((x[i], y[i]))\n",
+        "\n",
+        "    return all_data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "KcU5D8af1TX1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {
+        "id": "QvZ1nhbHzoiQ"
+      },
+      "outputs": [],
+      "source": [
+        "def to_graphemes(data):\n",
+        "    graph_data = []\n",
+        "\n",
+        "    for word_pair in data:\n",
+        "        word = word_pair[0]\n",
+        "        grap = word_pair[1]\n",
+        "\n",
+        "        cur_word = []\n",
+        "\n",
+        "        for i in range(0, len(word)):\n",
+        "            if i == (len(word) - 1):\n",
+        "                cur_word.append(word[i])\n",
+        "\n",
+        "            else:\n",
+        "                if grap[i+1] == 'I':\n",
+        "                    cur_word.append(word[i])\n",
+        "                else:\n",
+        "                    cur_word.append(word[i] + '-')\n",
+        "\n",
+        "        graph_data.append((word, ''.join(cur_word)))\n",
+        "\n",
+        "    return graph_data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Original"
+      ],
+      "metadata": {
+        "id": "fOTmQJ9z1Urs"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "semi_supervised()"
+        "def print_results_to_file(data):\n",
+        "    with open('/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/semisupervised_results.tsv', 'w', newline='') as tsvfile:\n",
+        "      writer = csv.writer(tsvfile, delimiter='\\t', lineterminator='\\n')\n",
+        "\n",
+        "      for row in data:\n",
+        "          writer.writerow(row)"
       ],
+      "metadata": {
+        "id": "gTG0TJoG1BL9"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HQyTtVkr3SzM"
+      },
+      "source": [
+        "Original"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nn5J86L8uH9u",
-        "outputId": "f7c8cb9e-99bc-4515-99b1-0baa79e5134d"
+        "outputId": "7862d032-f3f2-42bf-db2b-b47331be6eff"
       },
-      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Reading data...: 12812it [00:00, 206585.46it/s]\n"
+            "Reading data...: 12812it [00:00, 195973.93it/s]\n"
           ]
         },
         {
@@ -423,10 +568,34 @@
             "Custom calculated Accuracy:  96.95180557462584\n",
             "Precision:  74.34885556432518\n",
             "Recall:  99.1578947368421\n",
-            "Fscore:  84.97970230040596\n"
+            "Fscore:  84.97970230040596\n",
+            "[('raketè', 'r-a-k-e-t-è'), ('telegide', 't-e-l-e-g-i-d-e'), ('kòsaj', 'k-ò-s-a-j'), ('vayan', 'v-a-y-an'), ('kabouyay', 'k-a-b-ou-y-a-y')]\n"
           ]
         }
+      ],
+      "source": [
+        "semi_supervised()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "machine_shape": "hm",
+      "provenance": [],
+      "authorship_tag": "ABX9TyPokZdCtaVFmmSqOrWqwdph",
+      "include_colab_link": true
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
