Final updates to semisupervised model. Final FScore 84.98% on dev set

--- a/semisupervised.ipynb
+++ b/semisupervised.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 1,
       "metadata": {
         "id": "zwkkSetusdVb"
       },
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hjngr6X6sk7r",
-        "outputId": "c32c8f85-1b19-4e27-8933-ac3100b6029e"
+        "outputId": "01a6b8dc-6e72-4577-a592-16c22c5f55f3"
       },
       "outputs": [
         {
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 3,
       "metadata": {
         "id": "pEpjh6qgsoYf"
       },
@@ -102,6 +102,28 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def read_test_data():\n",
+        "    all_data = []\n",
+        "    with open(\"/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/test.txt\", encoding=\"utf-8\") as file:\n",
+        "        f = csv.reader(file, delimiter=\"\\t\")\n",
+        "        for line in tqdm(f, desc=\"Reading data...\"):\n",
+        "            word = line[0]\n",
+        "\n",
+        "            all_data.append([*word])\n",
+        "\n",
+        "    print(len(all_data))\n",
+        "\n",
+        "    return all_data"
+      ],
+      "metadata": {
+        "id": "aoe20P1xGZXV"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9zD5BnvUaj3j"
@@ -112,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 5,
       "metadata": {
         "id": "CqSPyByEtTj9"
       },
@@ -146,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 6,
       "metadata": {
         "id": "NjrEIguxR2u2"
       },
@@ -173,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 7,
       "metadata": {
         "id": "lfvbBNrTStwR"
       },
@@ -206,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 8,
       "metadata": {
         "id": "UlPOHdTtNt0Z"
       },
@@ -239,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 9,
       "metadata": {
         "id": "9Si092wuN0r7"
       },
@@ -275,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 10,
       "metadata": {
         "id": "TWe2rpGYNxup"
       },
@@ -311,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 11,
       "metadata": {
         "id": "ISMUcoOzNnOR"
       },
@@ -346,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 12,
       "metadata": {
         "id": "-NtZSkDetvsB"
       },
@@ -357,9 +379,13 @@
         "\n",
         "    x, y = split_data(data)\n",
         "\n",
-        "    x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.5, random_state = 50)\n",
+        "    x_test = read_test_data()\n",
+        "\n",
+        "    x_train, _, y_train, y_test = train_test_split(x, y, test_size = 0.4, random_state = 50)\n",
         "    clean_y_test = y_test\n",
         "    clean_x_test = x_test\n",
+        "\n",
+        "    del _, x, y, y_test\n",
         "\n",
         "    x_lab = combine_all_y(x_train[:650])\n",
         "    y_lab = combine_all_y(y_train[:650])\n",
@@ -376,11 +402,15 @@
         "    x_train_mixed = fle.transform(x_train_mixed)\n",
         "    x_train_mixed = x_train_mixed.reshape(-1, 1)\n",
         "\n",
+        "    del x_lab, x_train\n",
+        "\n",
         "    nolabel = [-1 for _ in range(len(y_hold), len(x_train_mixed))]\n",
         "\n",
         "    y_train_mixed = concatenate((y_hold, nolabel))\n",
         "\n",
-        "    model = LabelPropagation(max_iter=1000, tol=0.05, n_jobs = -1, kernel='rbf', gamma=30)\n",
+        "    del nolabel, y_hold\n",
+        "\n",
+        "    model = LabelPropagation(max_iter=1000, tol=0.1, n_jobs = -1, kernel='rbf', gamma=50)\n",
         "\n",
         "    model.fit(x_train_mixed, y_train_mixed)\n",
         "\n",
@@ -389,17 +419,20 @@
         "    x_test = x_test.reshape(-1, 1)\n",
         "\n",
         "    y_hat = model.predict(x_test)\n",
-        "    y_test = combine_all_y(y_test)\n",
-        "    y_test = le.transform(y_test)\n",
-        "    y_test = y_test.reshape(-1, 1)\n",
+        "    # y_test = combine_all_y(y_test)\n",
+        "    # y_test = le.transform(y_test)\n",
+        "    # y_test = y_test.reshape(-1, 1)\n",
         "\n",
-        "    score = accuracy_score(y_test, y_hat)\n",
-        "    print(score*100)\n",
+        "    # score = accuracy_score(y_test, y_hat)\n",
+        "    # print(score*100)\n",
         "\n",
         "    clean_preds = le.inverse_transform(y_hat)\n",
-        "    clean_preds = split_out(clean_y_test, clean_preds)\n",
         "\n",
-        "    custom_eval(clean_preds, clean_y_test)\n",
+        "    clean_preds = split_out(clean_x_test, clean_preds)\n",
+        "\n",
+        "    del y_hat\n",
+        "\n",
+        "    # custom_eval(clean_preds, clean_y_test)\n",
         "    clean_preds = make_words(clean_preds)\n",
         "\n",
         "    clean_x_test = make_words(clean_x_test)\n",
@@ -422,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 13,
       "metadata": {
         "id": "a0xHr2oVvLpG"
       },
@@ -452,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 14,
       "metadata": {
         "id": "9-M087Mewjt1"
       },
@@ -478,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 15,
       "metadata": {
         "id": "QvZ1nhbHzoiQ"
       },
@@ -521,7 +554,7 @@
       "cell_type": "code",
       "source": [
         "def print_results_to_file(data):\n",
-        "    with open('/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/semisupervised_results.tsv', 'w', newline='') as tsvfile:\n",
+        "    with open('/content/gdrive/MyDrive/Colab_Notebooks/NLP/kreole/semi.tsv', 'w', newline='') as tsvfile:\n",
         "      writer = csv.writer(tsvfile, delimiter='\\t', lineterminator='\\n')\n",
         "\n",
         "      for row in data:\n",
@@ -530,7 +563,7 @@
       "metadata": {
         "id": "gTG0TJoG1BL9"
       },
-      "execution_count": 41,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -544,32 +577,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nn5J86L8uH9u",
-        "outputId": "7862d032-f3f2-42bf-db2b-b47331be6eff"
+        "outputId": "183e0f43-bc32-4b02-8369-d45dd8a1c806"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Reading data...: 12812it [00:00, 195973.93it/s]\n"
+            "Reading data...: 12812it [00:00, 63424.87it/s]\n",
+            "Reading data...: 1427it [00:00, 484206.12it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "96.95180557462584\n",
-            "Custom calculated Accuracy:  96.95180557462584\n",
-            "Precision:  74.34885556432518\n",
-            "Recall:  99.1578947368421\n",
-            "Fscore:  84.97970230040596\n",
-            "[('raketè', 'r-a-k-e-t-è'), ('telegide', 't-e-l-e-g-i-d-e'), ('kòsaj', 'k-ò-s-a-j'), ('vayan', 'v-a-y-an'), ('kabouyay', 'k-a-b-ou-y-a-y')]\n"
+            "1427\n"
           ]
         }
       ],
@@ -584,7 +613,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "provenance": [],
-      "authorship_tag": "ABX9TyPokZdCtaVFmmSqOrWqwdph",
+      "authorship_tag": "ABX9TyNZ2BIO46EpNv4a+yHDatm6",
       "include_colab_link": true
     },
     "gpuClass": "standard",
